# BOSS-RUNS

./: .gitignore  .gitmodules  README.md  bossruns.py  config_template.toml  environment.yml  pyproject.toml
boss/: BOSS.py  _cli_base.py  batch.py  config.py  core.py  dependencies.py  dynamic_readfish.py  live.py  mapper.py  paf.py  readfish_boss.py  readlengthdist.py  sampler.py  utils.py
boss/aeons/: core.py  kmer.py  repeats.py  sequences.py  simulation.py
boss/readfish/: boss_readfish.py
boss/runs/: abundance_tracker.py  core.py  readstartdist.py  reference.py  sequences.py  simulation.py
bossruns/: BR_abundance_tracker.py  BR_batch.py  BR_core.py  BR_cov.py  BR_mapper.py  BR_merged_genome.py  BR_mmap_fq.py  BR_reference.py  BR_sample_fq.py  BR_sampler.py  BR_utils.py
doc/: developer_notes.md
scripts/: ROI_vcf.py  ROI_wgs.py  check_manager_connection.py  mappy_index_fasta.py  prepare_simulation_data.smk
tests/: conftest.py  constants.py  test_abundance_tracker.py  test_aeons_core.py  test_aeons_kmer.py  test_aeons_repeats.py  test_aeons_simulation.py  test_batch.py  test_config.py  test_core.py  test_dependencies.py  test_entry_point.py  test_live.py  test_mapper.py  test_paf.py  test_readlengthdist.py  test_reference.py  test_runs_core.py  test_runs_readstartdist.py  test_runs_sequences.py  test_runs_simulation.py  test_sampler.py
tests/base/: test_abundance_tracker.py  test_aeons_core.py  test_aeons_kmer.py  test_aeons_repeats.py  test_aeons_simulation.py  test_batch.py  test_config.py  test_core.py  test_entry_point.py  test_live.py  test_mapper.py  test_paf.py  test_readlengthdist.py  test_reference.py  test_runs_core.py  test_runs_readstartdist.py  test_runs_sequences.py  test_runs_simulation.py  test_sampler.py
tests/config/: BOSS_AEONS.toml  BOSS_AEONS_RF.toml  BOSS_AEONS_RF_broken.toml  BOSS_AEONS_SIM.toml  BOSS_AEONS_broken.toml  BOSS_RUNS.toml  BOSS_RUNS_RF.toml  BOSS_RUNS_RF_barcode.toml  BOSS_RUNS_RF_singleregion.toml  BOSS_RUNS_SIM.toml  BOSS_RUNS_SIM_barcoded.toml  BOSS_RUNS_barcode.toml  boss_ch20.toml  boss_ch20_readfish.toml  boss_ch20_sim.toml
tests/integration/: test_entry_point.py
tests/playback/: test_dynamic_readfish.py  test_live_playback.py  test_readfish_components.py
