
[tool.hatch.version]
path = "boss/__init__.py"


[build-system]
requires = ["hatchling>1.26.1"]
build-backend = "hatchling.build"


[project]
name = "boss_runs"
description = "Dynamic, adaptive sampling during nanopore sequencing"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "readfish[all]==2024.3.0",
    "Bottleneck~=1.3.7",
    "scipy~=1.12.0",
    "numba~=0.59.0",
    "mappy~=2.28",
]


[project.urls]
homepage = "https://github.com/goldman-gp-ebi/BOSS-RUNS/"


[project.optional-dependencies]
dev = [
    "pytest~=8.0.0",
    "pytest-cov~=4.1.0",
    "pytest-timeout~=2.2.0",
]


[project.scripts]
boss = "boss.BOSS:main"


[tool.hatch.build.targets.sdist]
exclude = [
  "/data",
  "/doc",
  "/tests",
  "/.git",
]


[tool.hatch.build.targets.wheel]
packages = ["boss"]


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
